adding stylings to headings

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     
     <div class="container">
         <header>
-            <h1>Your Shopping Cart</h1>
+            <h1>Delicious Delights.</h1>
             <div class="shopping">
                 <img src="image/shopping.svg">
                 <span class="quantity">0</span>
@@ -23,12 +23,12 @@
         </div>
     </div>
     <div class="card">
-        <h1>Card</h1>
+        <h1>Your Cart</h1>
         <ul class="listCard">
         </ul>
         <div class="checkOut">
             <div class="total">0</div>
-            <div class="closeShopping">Close</div>
+            <div class="closeShopping">Check Out</div>
         </div>
     </div>
 
