--- a/index.html
+++ b/index.html
@@ -22,9 +22,9 @@
           
         </div>
     </div>
-    <div class="card">
+    <div class="cart">
         <h1>Your Cart</h1>
-        <ul class="listCard">
+        <ul class="listCart">
         </ul>
         <div class="checkOut">
             <div class="total">0</div>
