added some stylings

--- a/index.html
+++ b/index.html
@@ -34,11 +34,11 @@
             <div class="payment">
                 <input type="radio" id="creditCard" name="paymentOption" value="Credit Card" checked>
                 <label for="creditCard">Credit Card</label>
-                <input type="radio" id="paypal" name="paymentOption" value="PayPal">
-                <label for="paypal">PayPal</label>
+                <input type="radio" id="paypal" name="paymentOption" value="M-Pesa">
+                <label for="mpesa">M-Pesa</label>
             </div>
             <button class="placeOrderBtn">Place Order</button>
-            <div class="closeShopping">Close</div>
+            <div class="closeShopping">Check Out</div>
         </div>
     </div>
 
